# resume-gen

./: README.md  pyproject.toml
src/regen/: __init__.py  cli.py  utils.py
src/regen/presets/: tex.py  tex_pdf.py  txt.py  word.py
src/regen/profiles/awetex-1/: template.tex
src/regen/profiles/txt-1/: template.txt
src/regen/profiles/word-1/: template.dotx
