[project]
name = "resume-gen"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "click>=8.1.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
resume-gen = "regen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "zs @ git+https://github.com/z2u4/zs.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/regen"]
