[project]
name = "zs.resume-gen"
version = "0.2.2"
description = "quick resume generator"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
    "click>=8.1.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zs.resume-gen" = "regen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "zuu>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/regen"]
